--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
@@ -976,8 +976,6 @@
 	vmmc-supply = <&reg_vref_3v3>;
 #endif
 	vqmmc-supply = <&reg_vref_3v3>;
-	voltage-ranges = <3300 3300>;
-	no-1-8-v;
 	keep-power-in-suspend;
 #ifdef CONFIG_PICOCOREMX8MM_WLAN
 	enable-sdio-wakeup;
@@ -1269,9 +1267,12 @@
 
 #ifndef CONFIG_PICOCOREMX8MM_AUDIO_B
 				/* AUDIO_B */
+#if (CONFIG_PICOCOREMX8MM_BOARD_REVISION < 130) && \
+!defined(CONFIG_PICOCOREMX8MM_SGTL5000_AUDIO)
 				MX8MM_IOMUXC_SAI1_MCLK_GPIO4_IO20	0x00104
 				MX8MM_IOMUXC_SAI1_TXC_GPIO4_IO11	0x00104
 				MX8MM_IOMUXC_SAI1_RXD0_GPIO4_IO2	0x00104
+#endif
 				MX8MM_IOMUXC_SAI1_TXD7_GPIO4_IO19	0x00104
 				MX8MM_IOMUXC_SAI1_TXD4_GPIO4_IO16	0x00104
 				MX8MM_IOMUXC_SAI1_TXD5_GPIO4_IO17	0x00104
