--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -132,7 +132,7 @@ CONFIG_BPF_JIT=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
 CONFIG_CAN_MCP251X=y
-CONFIG_CAN_MCP25XXFD=y
+CONFIG_CAN_MCP251XFD=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -544,6 +544,7 @@ CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
 CONFIG_EDAC_GHES=y
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_HCTOSYS_OPT=y
 CONFIG_RTC_DRV_PCF85063=y
 CONFIG_RTC_DRV_PCF85263=y
 CONFIG_RTC_DRV_SNVS=y
