--- a/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mx.dts
@@ -85,6 +85,10 @@
 
 /* Camera on serial MIPI CSI interface */
 //#define CONFIG_PICOCOREMX8MX_SERIAL_CAMERA
+/* Experimental implementation for Basler dart daA4200-30mci.
+ * Define CONFIG_PICOCOREMX8MX_SERIAL_CAMERA must also be set.
+ */
+//#define CONFIG_PICOCOREMX8MX_CAMERA_BASLER_daA4200
 
 /*
  * SD_A - External SD port with Card Detect (CD) and Write Protect (WP)
@@ -131,11 +135,20 @@
 	aliases {
 		/* Alias for GPMI node. Dont change it
 		 * because it used by the bootloader */
+#ifdef CONFIG_PICOCOREMX8MX_NAND
 		nand = &gpmi;
+#endif
+#ifdef CONFIG_PICOCOREMX8MX_EMMC
 		emmc = &usdhc3;
+#endif
 		eeprom = &eeprom;
+#ifdef CONFIG_PICOCOREMX8MX_CAN_A
 		mcp2518fd = &mcp2518fd;
+#endif
+#ifdef CONFIG_PICOCOREMX8MX_SGTL5000_AUDIO
 		sgtl5000 = &sgtl5000;
+#endif
+#ifdef CONFIG_PICOCOREMX8MX_ETH_I2C
 		/* Due to this labels U-Boot sets mac addresses
 		 * ethaddr/eth1addr to corresponding VLAN interfaces
 		 */
@@ -143,6 +156,7 @@
 		ethernet1 = &eth_port1;
 		/* Alias for gpio i2c bus. Used by bootloader. */
 		i2c4 = &i2c_gpio;
+#endif
 	};
 
 	/* -------------------- BOARD INFO -------------------- */
@@ -227,6 +241,7 @@
 #if defined(CONFIG_PICOCOREMX8MX_MIPI_DSI) \
 || defined(CONFIG_PICOCOREMX8MX_MIPI_DSI_LVDS)
 		/* LCD power on voltage */
+		/omit-if-no-ref/
 		reg_vlcd: vlcd {
 			compatible = "regulator-fixed";
 			regulator-name = "VLCD";
@@ -558,6 +573,28 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
+
+#ifdef CONFIG_PICOCOREMX8MX_CAMERA_BASLER_daA4200
+	basler_camera_mipi1: basler_camera_mipi@36 {
+		compatible = "basler,basler-camera";
+		reg = <0x36>;
+		status = "okay";
+
+		port {
+			basler_camera_mipi1_ep: endpoint {
+				remote-endpoint = <&mipi1_sensor_ep>;
+
+				/* IMPORTANT: The following three entries needs
+				 * to be held in sync with the information
+				 * stored in the mipi1_sensor_ep node.
+				 */
+				 data-lanes = < 1>;
+				 clock-lanes = <0>;
+				 link-frequenc = /bits/ 64 <594000000>;
+			};
+		};
+	};
+#endif
 };
 #endif
 
@@ -781,7 +818,10 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcie0>;
 	reset-gpio = <&gpio3 19 GPIO_ACTIVE_LOW>;
-	wake-gpio = <&gpio3 20 GPIO_ACTIVE_LOW>;
+	/* the wake pin of PCIe must be configured as normal
+	 * wakeup source and it is not a specific driver issue
+	 */
+	//wake-gpio = <&gpio3 20 GPIO_ACTIVE_LOW>;
 	clocks = <&clk IMX8MM_CLK_PCIE1_ROOT>,
 		 <&clk IMX8MM_CLK_PCIE1_AUX>,
 		 <&clk IMX8MM_CLK_PCIE1_PHY>,
@@ -960,10 +1000,31 @@
 		};
 	};
 #endif
+#ifdef CONFIG_PICOCOREMX8MX_CAMERA_BASLER_daA4200
+	port {
+		mipi1_sensor_ep: endpoint@1 {
+			remote-endpoint = <&basler_camera_mipi1_ep>;
+			/* If the following entries are changed, then
+			 * the entries in the basler_camera_mipi1_ep node
+			 * need to update too.
+			 */
+			/* On the i.mx8mmini NXP uses data-lanes
+			 * other than expected by the kernel.
+			 * On the imx8mmini the enry data-lanes
+			 * must contain the number of data lanes.
+			 */
+			data-lanes = <4>;
+			clock-lanes = <0>;
+			link-frequencies = /bits/ 64 <496000000>;
+			csis-hs-settle = <13>;
+			csis-clk-settle = <2>;
+			csis-wclk;
+		};
+	};
+#endif
 };
 
 &csi1_bridge {
-	fsl,mipi-mode;
 	status = "okay";
 #if 0
 	port {
@@ -971,6 +1032,10 @@
 			remote-endpoint = <&csi1_mipi_ep>;
 		};
 	};
+#endif
+#ifdef CONFIG_PICOCOREMX8MX_CAMERA_BASLER_daA4200
+	dma-coherent;
+	bsl,dma-invalidate;
 #endif
 };
 #endif
@@ -983,11 +1048,9 @@
 	status = "okay";
 };
 
-//#ifndef SUPPORT_M4
-//&A53_0 {
-//	arm-supply = <&buck2_reg>;
-//};
-//#endif
+&A53_0 {
+	cpu-supply = <&buck2_reg>;
+};
 
 &gpu {
 	status = "okay";
@@ -1436,7 +1499,7 @@
 				/* mPCIE_PERST */
 				MX8MM_IOMUXC_SAI5_RXFS_GPIO3_IO19	0x00041
 				/* mPCIE_WAKE */
-				MX8MM_IOMUXC_SAI5_RXC_GPIO3_IO20	0x00041
+				MX8MM_IOMUXC_SAI5_RXC_GPIO3_IO20	0x00144
 			>;
 		};
 #endif
