Improve device tree for SAI1 pins on picocoremx8mm.dts
SAI1_MCLK, SAI1_TXC, SAI1_RXD0 are only set for revison < 130 &&
!SGTL5000_AUDIO as GPIO with specific value. But it also can be set as
GPIO with specific value for revision >= 130. By default these pins are
set as GPIO but to match the new structure set it to the specific value.

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
@@ -1332,6 +1332,10 @@
 				MX8MM_IOMUXC_SAI1_MCLK_GPIO4_IO20	0x00104
 				MX8MM_IOMUXC_SAI1_TXC_GPIO4_IO11	0x00104
 				MX8MM_IOMUXC_SAI1_RXD0_GPIO4_IO2	0x00104
+#elif (CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130)
+				MX8MM_IOMUXC_SAI1_MCLK_GPIO4_IO20	0x00104
+				MX8MM_IOMUXC_SAI1_TXC_GPIO4_IO11	0x00104
+				MX8MM_IOMUXC_SAI1_RXD0_GPIO4_IO2	0x00104
 #endif
 				MX8MM_IOMUXC_SAI1_TXD7_GPIO4_IO19	0x00104
 				MX8MM_IOMUXC_SAI1_TXD4_GPIO4_IO16	0x00104
