Improve device tree for F&S standard panel
Improve device tree for F&S standard panel.
Correct property name for display power supply. Correct notation
is "power-supply".

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp-lcdif-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp-lcdif-j070wvtc0211.dts
@@ -13,7 +13,7 @@
 
 	lvds_panel {
 		compatible = "panel-lvds";
-		power = <&reg_vlcd>;
+		power-supply = <&reg_vlcd>;
 		backlight = <&backlight_ldb>;
 		data-mapping = "vesa-24";
 		label = "j070wvtc0211";
