Improve gar1/gar2/gar3 device trees
- Update GAR1 device tree to current revision and fix UART4 pinctrl
- Update GAR2 device tree to current revision
- Add GAR3 device tree which is based on GAR2

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -663,6 +663,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	cube2.0.dtb \
 	gar1.dtb \
 	gar2.dtb \
+	gar3.dtb \
 	imx6ull-14x14-evk.dtb \
 	imx6ull-14x14-evk-emmc.dtb \
 	imx6ull-14x14-evk-btwifi.dtb \
