--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-lcdif-tc358775-g070y2-l01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-lcdif-tc358775-g070y2-l01.dts
@@ -1,11 +1,12 @@
 /*
- * Copyright (C) 2020 F&S Elektronik Systeme GmbH
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License version 2 as
- * published by the Free Software Foundation.
- */
+* Copyright (C) 2021 F&S Elektronik Systeme GmbH
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License version 2 as
+* published by the Free Software Foundation.
+*/
 
+#define CONFIG_PICOCOREMX8MN_MIPI_DSI_LVDS
 #include "picocoremx8mn.dts"
 
 &mipi_dsi {
@@ -45,29 +46,30 @@
 		compatible = "toshiba,tc358764";
 		reg = <0>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_mipi_dsi_en>;
-
+		pinctrl-0 = <&pinctrl_mipi_dsi_lvds_en>;
 		clocks = <&clk IMX8MN_CLK_CLKO2>;
-		reset-gpios = <&gpio1 13 GPIO_ACTIVE_LOW>;
+#if CONFIG_PICOCOREMX8MN_BOARD_REVISION >= 130
+		reset-gpios = <&gpio4 31 GPIO_ACTIVE_HIGH>;
+#else
+		reset-gpios = <&gpio1 13 GPIO_ACTIVE_HIGH>;
+#endif
 		clock-names = "ext-clk";
 		ext-clk-rate = <33500000>;
-
-
 		vddc-supply = <&reg_vref_1v2>;
 		vddio-supply = <&reg_vref_1v8>;
 		vddlvds-supply = <&reg_vref_3v3>;
-
 		dsi,format = <0x0>; /* MIPI_DSI_FMT_RGB888 */
 		dsi,lanes = <4>;
-		dsi,flags = <0xB>; /* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST MIPI_DSI_MODE_VIDEO_AUTO_VERT */
+		/* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST
+		 * MIPI_DSI_MODE_VIDEO_AUTO_VERT
+		 */
+		dsi,flags = <0xB>;
 		refresh-rate = <60>;
-                rotate = <0>;
-
+		rotate = <0>;
 		panel-width-mm = <154>;
 		panel-height-mm = <85>;
 		display-timings {
 			native-mode = <&timing0>;
-
 			timing0: innolux_g070y2_l01 {
 				clock-frequency = <33500000>;
 				hactive = <800>;
@@ -95,17 +97,13 @@
 		status = "okay";
 		compatible = "toshiba,tc358764";
 		reg = <0xf>;
-
 		clocks = <&clk IMX8MN_CLK_CLKO2>;
 		clock-names = "ref";
-
 		ports {
 			#address-cells = <1>;
 			#size-cells = <0>;
-
 			port@2 {
 				reg = <2>;
-
 				dsi_bridge_in: endpoint {
 					remote-endpoint = <&mipi_dsi_out>;
 				};
@@ -117,4 +115,3 @@
 &lcdif {
 	status = "okay";
 };
-
