Improve eth support in picocoremx8mp
Improve eth support in picocoremx8mp
- Add reset gpio to mdio node (s. fec and eqos nodes)
- Add reset duration of 10ms to ensure the clock is stable
according to AR8035 data sheet
- Add deassert duration of 1ms.
- Add interrupt gpio to mdio node

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dts
@@ -455,6 +455,11 @@
 		ethphy0: ethernet-phy@4 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <4>;
+			reset-gpios = <&gpio1 11 GPIO_ACTIVE_LOW>;
+			reset-assert-us = <10000>;
+			reset-deassert-us = <1000>;
+			interrupt-parent = <&gpio1>;
+			interrupts = <4 IRQ_TYPE_LEVEL_LOW>;
 			eee-broken-1000t;
 		};
 	};
@@ -477,6 +482,11 @@
 		ethphy1: ethernet-phy@5 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <5>;
+			reset-gpios = <&gpio4 28 GPIO_ACTIVE_LOW>;
+			reset-assert-us = <10000>;
+			reset-deassert-us = <1000>;
+			interrupt-parent = <&gpio4>;
+			interrupts = <29 IRQ_TYPE_LEVEL_LOW>;
 			eee-broken-1000t;
 		};
 	};
