Improve support for picocom1.2
Activate define UART_F and UART_F_RTSCTS. It will be automatically
disabled by SPI_B.

--- a/arch/arm/boot/dts/picocom1.2.dts
+++ b/arch/arm/boot/dts/picocom1.2.dts
@@ -65,8 +65,8 @@
 #define CONFIG_PICOCOM1_2_UART_D
 #define CONFIG_PICOCOM1_2_UART_D_RTSCTS
 #define CONFIG_PICOCOM1_2_UART_E
-//#define CONFIG_PICOCOM1_2_UART_F
-//#define CONFIG_PICOCOM1_2_UART_F_RTSCTS
+#define CONFIG_PICOCOM1_2_UART_F
+#define CONFIG_PICOCOM1_2_UART_F_RTSCTS
 
 /* SPI: SPI_A (3x CS) on pins 55-60, SPI_B (1x CS) on pins 63-66 */
 #define CONFIG_PICOCOM1_2_SPI_A
