Add driver for lontium-lt9211 MIPI2RGB converter
This driver is based on the example driver by Lontium
LT9211_MIPI2TTL_LVDS_Code_v1_4_2-modify20201205.

Because the lt9211 needs valid MIPI input data to configure itself, we
initialize the MIPI side with the simple panel driver and wait in the
lt9211-probe until the panel is enabled.

We do not have implemented any suspend/resume functions yet so this
driver will not work with deep sleep applications.

--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -168,6 +168,17 @@ config DRM_TI_SN65DSI86
 	help
 	  Texas Instruments SN65DSI86 DSI to eDP Bridge driver
 
+config DRM_LONTIUM_LT9211
+	tristate "Lontium LT9211 DSI/RGB bridge"
+	depends on OF
+	select DRM_PANEL_BRIDGE
+	select DRM_KMS_HELPER
+	select REGMAP_I2C
+	help
+	  Driver for Lontium LT9211 DSI to RGB bridge
+	  chip driver that converts DSI RGB TTL signals
+	  Please say Y if you have such hardware.
+
 source "drivers/gpu/drm/bridge/analogix/Kconfig"
 
 source "drivers/gpu/drm/bridge/adv7511/Kconfig"
